--- a/kikeletpanzio2.0/kikeletpanzio2.0/Log_IN.xaml
+++ b/kikeletpanzio2.0/kikeletpanzio2.0/Log_IN.xaml
@@ -6,6 +6,31 @@
         xmlns:local="clr-namespace:kikeletpanzio2._0"
         mc:Ignorable="d"
         Title="Log_IN" Height="450" Width="400">
+    <Window.Resources>
+        <Style TargetType="Label">
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+            <Setter Property="FontSize" Value="15"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#a7f432"/>
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Border Background="{TemplateBinding Background}" 
+                 BorderBrush="{TemplateBinding BorderBrush}" 
+                 BorderThickness="1" 
+                 CornerRadius="10">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <StackPanel>
         <Label Content="Email:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
@@ -18,7 +43,7 @@
         <TextBox Name="IdentifierTextBox" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Width="200"/>
         
 
-        <Button x:Name="LoginButton" Content="Bejelentkezés" HorizontalAlignment="Left" Margin="50,20,0,0" VerticalAlignment="Top" Width="100" Click="LOG_IN_Click"/>
+        <Button x:Name="LoginButton" Content="Bejelentkezés" HorizontalAlignment="Left" Margin="50,20,0,0" VerticalAlignment="Top" Width="150" Height="30" Click="LOG_IN_Click"/>
         </StackPanel>
     </Grid>
 </Window>
