--- a/kikeletpanzio2.0/kikeletpanzio2.0/MainWindow.xaml
+++ b/kikeletpanzio2.0/kikeletpanzio2.0/MainWindow.xaml
@@ -6,7 +6,16 @@
         xmlns:local="clr-namespace:kikeletpanzio2._0"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Window.Resources>
+        <Style TargetType="MenuItem">
+            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+        </Style>
+        <Style TargetType="Separator">
+            <Setter Property="Background" Value="#8bca84"/>
+        </Style>
+    </Window.Resources>
+    <Grid Background="#a7f432">
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
             <RowDefinition Height="*"/>
@@ -14,7 +23,7 @@
 
         <Menu>
             <MenuItem Name="MenuI_Booking" Header="Foglalás" Click="MenuI_Booking_Click"/>
-            <Separator Width="500"/>
+            <Separator Width="400"/>
             <MenuItem Name="MenuI_LogIn" Header="Bejelentkezés" Click="MenuI_LogIn_Click"/>
             <MenuItem Name="MenuI_SignIn" Header="Regisztráció" Click="MenuI_SignIn_Click"/>
             <MenuItem Name="MenuI_Statistic" Header="Statisztika" Click="MenuI_Statistic_Click"/>
