--- a/kikeletpanzio2.0/kikeletpanzio2.0/Sign_in.xaml
+++ b/kikeletpanzio2.0/kikeletpanzio2.0/Sign_in.xaml
@@ -6,6 +6,31 @@
         xmlns:local="clr-namespace:kikeletpanzio2._0"
         mc:Ignorable="d"
         Title="Sign_in" Height="680" Width="800">
+    <Window.Resources>
+        <Style TargetType="Label">
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+            <Setter Property="FontSize" Value="13"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#a7f432"/>
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Border Background="{TemplateBinding Background}" 
+         BorderBrush="{TemplateBinding BorderBrush}" 
+         BorderThickness="1" 
+         CornerRadius="10">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -13,10 +38,6 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
 
         <StackPanel>
             <Label Content="Vezetéknév:"/>
