--- a/kikeletpanzio2.0/kikeletpanzio2.0/Statistic.xaml
+++ b/kikeletpanzio2.0/kikeletpanzio2.0/Statistic.xaml
@@ -5,8 +5,54 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:kikeletpanzio2._0"
         mc:Ignorable="d"
-        Title="Statistic" Height="450" Width="800">
+        Title="Statistic" Height="450" Width="400">
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#a7f432"/>
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Border Background="{TemplateBinding Background}" 
+ BorderBrush="{TemplateBinding BorderBrush}" 
+ BorderThickness="1" 
+ CornerRadius="10">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="15
+                    "/>
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <StackPanel >
+            <TextBlock Text="Összes bevétel:" Margin="10,20,0,0" />
+            <TextBlock Name="osszbeveteltbk" Margin="10,20,0,0" Width="220"/>
+        </StackPanel>
+        <StackPanel Grid.Row="1">
+            <TextBlock Text="Legtöbbet kiadott szoba:" Margin="10,0,0,0"/>
+            <TextBlock Name="legtobbszobatbk" Margin="10,20,0,0" Width="260"/>
+        </StackPanel>
+        <StackPanel Grid.Row="2">
+            <TextBlock Text="Visszajáró vendégek:" Margin="10,0,0,0"/>
+            <TextBlock Name="visszajaroktbk" Margin="10,20,0,0" Width="220"/>
+        </StackPanel>
+        <StackPanel Grid.Row="3">
+            <Button Name="Backbtn" Content="Vissza lépés" Background="#a7f432" Width="180" Height="60" Margin="0,20,0,0" Click="Back_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
